kubernetes-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hip-local-ui
  labels:
    app: hip-local-ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hip-local-ui
  template:
    metadata:
      labels:
        app: hip-local-ui
    spec:
      containers:
      - name: hip-local-ui
        image: gcr.io/roi-hiplocal/ui:v0.8
        ports:
        - containerPort: 8080
          name: "frontend-server"
        resources:
          requests:
            memory: "256Mi"
            cpu: "0.1"
          limits:
            memory: "512Mi"
            cpu: "0.5"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 60
---

apiVersion: v1
kind: Service
metadata: 
  name: hip-local-ui-svc
spec: 
  ports: 
     -  port: 80
        protocol: TCP
        targetPort: 8080
  selector: 
    app: hip-local-ui
  type: NodePort
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hip-local-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "hip-local"
spec:
  backend:
    serviceName: hip-local-ui-svc
    servicePort: 80
  rules:
  - host: hiplocal.kwikstart.net
    http:
      paths:
      - path: /
        backend:
          serviceName: hip-local-ui-svc
          servicePort: 80
